--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-# baseurl = "https://chinadevopsdays.org/"
-baseurl = "https://chinadevopsdays.github.io/"
+baseurl = "https://chinadevopsdays.org/"
+# baseurl = "https://chinadevopsdays.github.io/"
 title = "中国DevOpsDays社区"
 theme = "hugo-universal-theme"
 # themesDir = "../.."
