--- a/config.toml
+++ b/config.toml
@@ -98,7 +98,7 @@ paginate = 10
     #googleMapsApiKey = "AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y"
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
-    style = "turquoise"
+    style = "blue"
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
@@ -116,7 +116,7 @@ paginate = 10
     email = "organizer@ChinaDevOpsDays.org"
 
     about_us = "<p>中国DevOpsDays社区</p>"
-    copyright = "Copyright (c) 2018; all rights reserved."
+    copyright = "Copyright (c) 2019; all rights reserved."
 
     # Format dates with Go's time formatting
     date_format = "2006-01-02"
