--- a/data/carousel/cams.yaml
+++ b/data/carousel/cams.yaml
@@ -8,4 +8,4 @@ description: >
     <li>measurement 度量</li>
     <li>share 分享</li>
   </ul>
-image: "img/carousel/yundong.png"
+image: "img/carousel/devops.jpg"
