--- a/data/carousel/ronghe.yaml
+++ b/data/carousel/ronghe.yaml
@@ -4,7 +4,7 @@ description: >
   <ul class="list-style-none">
     <li>敏捷开发</li>
     <li>持续交付</li>
-    <li>IT服务管理</li>
+    <li>研发效能</li>
     <li>精益思想</li>
   </ul>
-image: "img/carousel/ronghe.png"
+image: "img/carousel/newSkills.jpg"
