tunning ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 public/
 .DS_Store
 deploy.sh
-.idea/
+project/project
+project/target
+project/bin
+target
+bin
+tmp
+.history
+dist
+/.idea
+*.iml
+/**/.bak
+.classpath
+.project
+.settings
+.metadata
