update devops img

--- a/data/carousel/ronghe.yaml
+++ b/data/carousel/ronghe.yaml
@@ -6,5 +6,6 @@ description: >
     <li>持续交付</li>
     <li>研发效能</li>
     <li>精益思想</li>
+    <li>&nbsp;</li>
   </ul>
 image: "img/carousel/newSkills.jpg"
