--- a/data/carousel/sh-2019.yaml
+++ b/data/carousel/sh-2019.yaml
@@ -6,5 +6,6 @@ description: >
     <li>传承国际社区文化</li>
     <li>传播DevOps理念</li>
     <li><a href="http://DevOpsDays-SH.bagevent.com">购票入口</a></li>
+    <li>&nbsp;</li>
   </ul>
 image: "img/carousel/shanghaii2019.jpg"
