--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
 
 # 构建全站的所有网页
 script:
-  - hugo version  && date # 显示hugo的版本
-  - export BUILD_TIME=`date '+%Y-%m-%d %H:%M:%S'`
+  - hugo version  # 显示hugo的版本
+  - export BUILD_TIME=`TZ='Asia/Shanghai' date '+%Y-%m-%d %H:%M:%S'`
   - hugo # 在Travis里构建全站页面到public目录中
   - echo $BUILD_TIME
   - cp README.md CNAME public  # 将必要的文件复制到public中
